# sim-stream-host

./: BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
.github/workflows/: ci.yml
crates/sim-lib-stream-halo/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-halo/src/: ble.rs  camera.rs  frame_budget.rs  lib.rs  lua_render.rs  provider.rs  relay.rs  sample.rs  stub.rs  tests.rs
crates/sim-lib-stream-viture/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-viture/src/: camera.rs  device_control.rs  lib.rs  provider.rs  tests.rs  vio.rs
crates/sim-lib-stream-wristbridge/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-stream-wristbridge/bringup/: ledger
crates/sim-lib-stream-wristbridge/src/: ble.rs  bringup.rs  bringup_tests.rs  command.rs  event.rs  import.rs  lib.rs  relay.rs  session.rs  stub.rs  tests.rs  zepp.rs
crates/sim-viture-ffi/: BROCHURE.md  Cargo.toml  README.md
crates/sim-viture-ffi/src/: carina.rs  dynload.rs  legacy.rs  lib.rs  stub.rs  tests.rs
docs/agents/: card-index.json  cards.jsonl
docs/diagrams/src/: README.md
docs/humans/: README.md
recipes/: book.toml
recipes/01-basics/: chapter.toml
recipes/01-basics/fake-backend/: purpose.md  recipe.toml  setup.siml
src/: audio_provider.rs  backend.rs  capability.rs  cassette.rs  catalog.rs  catalog_tests.rs  config.rs  config_probe.rs  config_probe_tests.rs  cookbook.rs  device.rs  device_tests.rs  eval_site.rs  fake.rs  glasses.rs  glasses_placement.rs  glasses_placement_tests.rs  glasses_tests.rs  inventory.rs  lib.rs  midi_live_eval_site.rs  midi_provider.rs  model.rs  placement.rs  placement_tests.rs  provider.rs  provider_tests.rs  queue.rs  registry.rs  ring.rs  ring_tests.rs  router.rs  rtp_midi.rs  site.rs  store_evict.rs  tests.rs  watch.rs  watch_tests.rs
src/placement/: audio.rs  device.rs  lan.rs
src/tests/: backend.rs  callback_queue.rs  cassette.rs  rtp_midi.rs  stream_open.rs  support.rs
xtask/: README.md
xtask/src/: main.rs  tooling.rs
