[package]
name = "sim-lib-stream-host"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Host-device stream backend substrate for STREAM 6."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream-host"
homepage = "https://github.com/sim-nest/sim-stream-host"

[workspace]
resolver = "3"
members = [
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-stream-host"
homepage = "https://github.com/sim-nest/sim-stream-host"

[workspace.lints.rust]
unsafe_code = "forbid"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-lib-midi-core = { version = "0.1.0" }
sim-lib-midi-live = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0" }

[features]
default = ["rtp-midi"]
rtp-midi = []
rtmidi-hardware = []
ble-midi-hardware = []

[lints]
workspace = true
