[package]
name = "sim-lib-stream-host"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Host-device stream backend substrate for SIM streams."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream-host"
homepage = "https://github.com/sim-nest/sim-stream-host"

[workspace]
resolver = "3"
members = [
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-stream-host"
homepage = "https://github.com/sim-nest/sim-stream-host"

[workspace.lints.rust]
unsafe_code = "forbid"

[dependencies]
sim-config = { version = "0.1.1" }
sim-kernel = { version = "0.1.0" }
sim-lib-midi-core = { version = "0.1.0" }
sim-lib-midi-live = { version = "0.1.0" }
sim-lib-stream-core = { version = "0.1.0" }

[features]
default = ["rtp-midi"]
rtp-midi = []
rtmidi-hardware = []
ble-midi-hardware = []

[dev-dependencies]
sim-codec = { version = "0.1.0" }
sim-codec-lisp = { version = "0.1.0" }
sim-kernel = { version = "0.1", features = ["test-support"] }
sim-lib-numbers-i64 = { version = "0.1.1" }

[lints]
workspace = true
