[package]
name = "sim-lib-stream-halo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Local Halo glasses provider and byte-budgeted Lua glance renderer."
readme = "BROCHURE.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream-host"
homepage = "https://github.com/sim-nest/sim-stream-host"

[dependencies]
sim-kernel = { version = "0.1.4" }
sim-lib-scene = { version = "0.1.4" }
sim-lib-stream-device = { version = "0.1.0", git = "https://github.com/sim-nest/sim-stream", rev = "fbc0d112d863ac6145b31b62ee5ec8e580c184b1" }
sim-lib-stream-host = { version = "0.1.4", path = "../.." }
sim-lib-stream-xr = { version = "0.1.0", git = "https://github.com/sim-nest/sim-stream", rev = "fbc0d112d863ac6145b31b62ee5ec8e580c184b1" }
sim-lib-view-device = { version = "0.1.0" }
sim-value = { version = "0.1.2" }

[dev-dependencies]

[lints]
workspace = true
