[package]
name = "sim-lib-stream-viture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Local VITURE glasses provider for SIM XR stream samples."
readme = "BROCHURE.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream-host"
homepage = "https://github.com/sim-nest/sim-stream-host"

[dependencies]
sim-kernel = { version = "0.1.4" }
sim-lib-stream-device = { version = "0.1.0", git = "https://github.com/sim-nest/sim-stream", rev = "673529407c09af396b52586fa26a18d40eb14d50" }
sim-lib-stream-host = { version = "0.1.3", path = "../.." }
sim-lib-stream-xr = { version = "0.1.0", git = "https://github.com/sim-nest/sim-stream", rev = "673529407c09af396b52586fa26a18d40eb14d50" }
sim-lib-view-device = { version = "0.1.0" }
sim-value = { version = "0.1.2" }
sim-viture-ffi = { version = "0.1.0", path = "../sim-viture-ffi" }

[dev-dependencies]

[lints]
workspace = true
