[package]
name = "sim-lib-stream-wristbridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Local watch provider routes for SIM worn streams."
readme = "BROCHURE.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream-host"
homepage = "https://github.com/sim-nest/sim-stream-host"

[dependencies]
sim-kernel = { version = "0.1.4" }
sim-lib-stream-host = { version = "0.1.3", path = "../.." }
sim-value = { version = "0.1.2" }

[dev-dependencies]

[lints]
workspace = true
