[package]
name = "sim-viture-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Unsafe-isolated dynamic loader for VITURE glasses SDK entry points."
readme = "BROCHURE.md"
publish = true
repository = "https://github.com/sim-nest/sim-stream-host"
homepage = "https://github.com/sim-nest/sim-stream-host"

[dependencies]
libloading = "0.8"

[lints.rust]
unsafe_code = "allow"
